--- a/Business/CommonBusiness/build.gradle
+++ b/Business/CommonBusiness/build.gradle
@@ -26,15 +26,44 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation rootProject.ext.dependencies["appcompat"]
     implementation rootProject.ext.dependencies["annotation"]
-    //公共类
-    implementation project(path: ':BaseClassLib')
-    implementation project(path: ':ComponentLib')
-    implementation project(path: ':ToolUtilsLib')
-    implementation project(path: ':ActivityManager')
-    implementation project(path: ':AppBaseStore')
-    implementation project(path: ':AppLogLib')
-    implementation project(path: ':AppRestartLib')
-    implementation project(path: ':SafeIntentLib')
+
+    //base基类
+    implementation 'com.github.yangchong211.YCCommonLib:BaseClassLib:1.3.3'
+    implementation 'com.github.yangchong211.YCCommonLib:ComponentLib:1.3.3'
+    //工具类utils
+    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.3'
+    //activity栈管理
+    implementation 'com.github.yangchong211.YCCommonLib:ActivityManager:1.3.3'
+    //通用缓存存储库，支持sp，fastsp，mmkv，lruCache，DiskLruCache等
+    implementation 'com.github.yangchong211.YCCommonLib:AppBaseStore:1.3.3'
+    //通用日志输出库
+    implementation 'com.github.yangchong211.YCCommonLib:AppLogLib:1.3.3'
+    //app重启库
+    implementation 'com.github.yangchong211.YCCommonLib:AppRestartLib:1.3.3'
+    //intent内容输出到控制台
+    implementation 'com.github.yangchong211.YCCommonLib:SafeIntentLib:1.3.3'
+    //通用组件接口库
+    implementation 'com.github.yangchong211.YCCommonLib:AppCommonInter:1.3.3'
+    //各种广播监听哭
+    implementation 'com.github.yangchong211.YCCommonLib:AppStatusLib:1.3.3'
+    //基建库
+    implementation 'com.github.yangchong211.YCCommonLib:ArchitectureLib:1.3.3'
+    //同上上报库
+    implementation 'com.github.yangchong211.YCCommonLib:EventUploadLib:1.3.3'
+
 
     implementation project(path: ':AppProcessLib')
+    //公共类
+//    implementation project(path: ':BaseClassLib')
+//    implementation project(path: ':ComponentLib')
+//    implementation project(path: ':ToolUtilsLib')
+//    implementation project(path: ':ActivityManager')
+//    implementation project(path: ':AppBaseStore')
+//    implementation project(path: ':AppLogLib')
+//    implementation project(path: ':AppRestartLib')
+//    implementation project(path: ':SafeIntentLib')
+//    implementation project(path: ':AppCommonInter')
+//    implementation project(path: ':AppStatusLib')
+//    implementation project(path: ':ArchitectureLib')
+//    implementation project(path: ':EventUploadLib')
 }
