--- a/Business/OkHttpBusiness/build.gradle
+++ b/Business/OkHttpBusiness/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     implementation project(path: ':ToolUtilsLib')
     implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.9'
     implementation project(path: ':NetInterceptor')
+    implementation project(path: ':MonitorInterceptor')
+    implementation project(path: ':MonitorInterceptor')
 }
 
 
