--- a/Business/CommonBusiness/build.gradle
+++ b/Business/CommonBusiness/build.gradle
@@ -54,16 +54,16 @@ dependencies {
 
     implementation project(path: ':AppProcessLib')
     //公共类
-//    implementation project(path: ':BaseClassLib')
-//    implementation project(path: ':ComponentLib')
-//    implementation project(path: ':ToolUtilsLib')
-//    implementation project(path: ':ActivityManager')
-//    implementation project(path: ':AppBaseStore')
-//    implementation project(path: ':AppLogLib')
-//    implementation project(path: ':AppRestartLib')
-//    implementation project(path: ':SafeIntentLib')
-//    implementation project(path: ':AppCommonInter')
-//    implementation project(path: ':AppStatusLib')
-//    implementation project(path: ':ArchitectureLib')
-//    implementation project(path: ':EventUploadLib')
+    implementation project(path: ':BaseClassLib')
+    implementation project(path: ':ComponentLib')
+    implementation project(path: ':ToolUtilsLib')
+    implementation project(path: ':ActivityManager')
+    implementation project(path: ':AppBaseStore')
+    implementation project(path: ':AppLogLib')
+    implementation project(path: ':AppRestartLib')
+    implementation project(path: ':SafeIntentLib')
+    implementation project(path: ':AppCommonInter')
+    implementation project(path: ':AppStatusLib')
+    implementation project(path: ':ArchitectureLib')
+    implementation project(path: ':EventUploadLib')
 }
