--- a/MonitorLib/MonitorAliveLib/build.gradle
+++ b/MonitorLib/MonitorAliveLib/build.gradle
@@ -30,6 +30,8 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation(rootProject.ext.dependencies["appcompat"])
     implementation(rootProject.ext.dependencies["annotation"])
-    implementation project(path: ':ToolUtilsLib')
+    //implementation project(path: ':ToolUtilsLib')
+    //工具类utils
+    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.3'
     implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.0.0'
 }
