--- a/Business/DemoBusiness/src/main/AndroidManifest.xml
+++ b/Business/DemoBusiness/src/main/AndroidManifest.xml
@@ -5,7 +5,6 @@
         <activity android:name="com.yc.other.ui.activity.TestActivity"/>
         <activity android:name="com.yc.other.ui.activity.AboutMeActivity"/>
         <activity android:name="com.yc.other.ui.activity.MeFeedBackActivity"/>
-        <activity android:name="com.yc.other.ui.activity.ImageGalleryActivity"/>
         <activity android:name="com.yc.other.ui.activity.MeLoginActivity"/>
         <activity android:name="com.yc.other.ui.activity.MeBannerActivity"/>
         <activity android:name="com.yc.other.ui.activity.BannerViewActivity"/>
@@ -24,12 +23,7 @@
         <activity android:name="com.yc.other.ui.timer.CountViewActivity"/>
         <activity android:name="com.yc.other.ui.timer.HandlerActivity"/>
         <activity android:name="com.yc.other.ui.activity.SerialTaskActivity"/>
-
-
-        <activity android:name=".thread.ThreadActivity"/>
-        <activity android:name=".thread.ThreadPoolExecutorActivity"/>
-        <activity android:name=".thread.MainThreadActivity"/>
-        <activity android:name=".thread.ExecutorsTestActivity"/>
+        <activity android:name=".ui.activity.NtpTimeActivity"/>
     </application>
 
 
