--- a/ToolLib/NtpTimeLib/build.gradle
+++ b/ToolLib/NtpTimeLib/build.gradle
@@ -1,10 +1,5 @@
-plugins {
-    id 'com.android.library'
-}
+apply plugin: 'com.android.library'
 apply from: rootProject.projectDir.absolutePath + "/yc.gradle"
-//迁移到jitpack
-apply plugin: 'com.github.dcendents.android-maven'
-
 
 android {
     compileSdkVersion rootProject.ext.android["compileSdkVersion"]
@@ -15,13 +10,13 @@ android {
         versionCode rootProject.ext.android["versionCode"]
         versionName rootProject.ext.android["versionName"]
     }
-
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -30,9 +25,6 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation(rootProject.ext.dependencies["appcompat"])
-    implementation(rootProject.ext.dependencies["annotation"])
-    implementation(rootProject.ext.dependencies["okhttp"])
-    //implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    //工具类utils：https://github.com/yangchong211/YCCommonLib
+    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.3'
 }
-
