--- a/settings.gradle
+++ b/settings.gradle
@@ -13,7 +13,7 @@ include ':GameBusiness', ':AnimBusiness',':MvvmDatabinding',
         ':MvcTodoBusiness',':JetpackBusiness',':AndroidBusiness',':CommonBusiness',
         ':BusinessInterface', ':StatusBusiness', ':OkHttpBusiness',':BleBusiness',
         ':ThreadBusiness', ':NotifyBusiness', ':KotlinBusiness', ':PlayerBusiness',
-        ':SocketBusiness',':LibraryLayer'
+        ':SocketBusiness',':WidgetBusiness',':LibraryLayer'
 project(':GameBusiness').projectDir = new File('Business/GameBusiness')
 project(':AndroidBusiness').projectDir = new File('Business/AndroidBusiness')
 project(':JetpackBusiness').projectDir = new File('Business/JetpackBusiness')
@@ -33,6 +33,7 @@ project(':NotifyBusiness').projectDir = new File('Business/NotifyBusiness')
 project(':KotlinBusiness').projectDir = new File('Business/KotlinBusiness')
 project(':PlayerBusiness').projectDir = new File('Business/PlayerBusiness')
 project(':SocketBusiness').projectDir = new File('Business/SocketBusiness')
+project(':WidgetBusiness').projectDir = new File('Business/WidgetBusiness')
 project(':LibraryLayer').projectDir = new File('Business/LibraryLayer')
 
 
@@ -98,7 +99,8 @@ include ':BannerViewLib', ':PhotoWidget', ':CustomWidget', ':BlurViewLib',
         ':DialogFragment', ':SnackBar', ':PopupWindow', ':BaseDialog', ':RoundCorners',
         ':EastAdapterLib', ':PhotoCoverLib', ':RefreshViewLib', ':SelectViewLib',
         ':GroupAdapterLib', ':BaseProgress', ':CircleProgress', ':SlideViewLib',
-        ':FloatWindow'
+        ':FloatWindow', ':AppTextView', ':AppImageView', ':AppButtonView', ':AppScrollView',
+        ':AppSwitchView'
 project(':BannerViewLib').projectDir = new File('WidgetLib/BannerViewLib')
 project(':PhotoWidget').projectDir = new File('WidgetLib/PhotoWidget')
 project(':CustomWidget').projectDir = new File('WidgetLib/CustomWidget')
@@ -129,6 +131,11 @@ project(':BaseProgress').projectDir = new File('WidgetLib/BaseProgress')
 project(':CircleProgress').projectDir = new File('WidgetLib/CircleProgress')
 project(':SlideViewLib').projectDir = new File('WidgetLib/SlideViewLib')
 project(':FloatWindow').projectDir = new File('WidgetLib/FloatWindow')
+project(':AppTextView').projectDir = new File('WidgetLib/AppTextView')
+project(':AppImageView').projectDir = new File('WidgetLib/AppImageView')
+project(':AppButtonView').projectDir = new File('WidgetLib/AppButtonView')
+project(':AppScrollView').projectDir = new File('WidgetLib/AppScrollView')
+project(':AppSwitchView').projectDir = new File('WidgetLib/AppSwitchView')
 
 
 
@@ -217,5 +224,6 @@ project(':VideoKernel').projectDir = new File('PlayerLib/VideoKernel')
 project(':VideoPlayer').projectDir = new File('PlayerLib/VideoPlayer')
 project(':VideoM3u8').projectDir = new File('PlayerLib/VideoM3u8')
 project(':VideoView').projectDir = new File('PlayerLib/VideoView')
+
 
 
