--- a/settings.gradle
+++ b/settings.gradle
@@ -100,7 +100,7 @@ include ':BannerViewLib', ':PhotoWidget', ':CustomWidget', ':BlurViewLib',
         ':EastAdapterLib', ':PhotoCoverLib', ':RefreshViewLib', ':SelectViewLib',
         ':GroupAdapterLib', ':BaseProgress', ':CircleProgress', ':SlideViewLib',
         ':FloatWindow', ':AppTextView', ':AppImageView', ':AppButtonView', ':AppScrollView',
-        ':AppSwitchView'
+        ':AppSwitchView', ':AppEditText'
 project(':BannerViewLib').projectDir = new File('WidgetLib/BannerViewLib')
 project(':PhotoWidget').projectDir = new File('WidgetLib/PhotoWidget')
 project(':CustomWidget').projectDir = new File('WidgetLib/CustomWidget')
@@ -136,7 +136,7 @@ project(':AppImageView').projectDir = new File('WidgetLib/AppImageView')
 project(':AppButtonView').projectDir = new File('WidgetLib/AppButtonView')
 project(':AppScrollView').projectDir = new File('WidgetLib/AppScrollView')
 project(':AppSwitchView').projectDir = new File('WidgetLib/AppSwitchView')
-
+project(':AppEditText').projectDir = new File('WidgetLib/AppEditText')
 
 
 /* +++++++++ 框架基础工具库 +++++++++ */
