--- a/AppLeet/src/main/AndroidManifest.xml
+++ b/AppLeet/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.yc.leetbusiness.code.CodeTestActivity"/>
         <activity android:name="com.yc.leetbusiness.array.ArrayTestActivity"/>
     </application>
 
