--- a/MonitorLib/MonitorMemory/build.gradle
+++ b/MonitorLib/MonitorMemory/build.gradle
@@ -1,9 +1,6 @@
 plugins {
     id 'com.android.library'
 }
-plugins {
-    id 'kotlin-android'
-}
 apply from: rootProject.projectDir.absolutePath + "/yc.gradle"
 
 
@@ -16,6 +13,7 @@ android {
         versionCode rootProject.ext.android["versionCode"]
         versionName rootProject.ext.android["versionName"]
     }
+
 
     buildTypes {
         release {
@@ -33,4 +31,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation(rootProject.ext.dependencies["appcompat"])
     implementation(rootProject.ext.dependencies["annotation"])
+    //implementation project(path: ':ToolUtilsLib')
+    //工具类utils：https://github.com/yangchong211/YCCommonLib
+    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.3'
 }
