--- a/settings.gradle
+++ b/settings.gradle
@@ -100,7 +100,7 @@ include ':BannerViewLib', ':PhotoWidget', ':CustomWidget', ':BlurViewLib',
         ':EastAdapterLib', ':PhotoCoverLib', ':RefreshViewLib', ':SelectViewLib',
         ':GroupAdapterLib', ':BaseProgress', ':CircleProgress', ':SlideViewLib',
         ':FloatWindow', ':AppTextView', ':AppImageView', ':AppButtonView', ':AppScrollView',
-        ':AppSwitchView', ':AppEditText', ':AppConstraintLayout'
+        ':AppSwitchView', ':AppEditText', ':AppConstraintLayout', ':AppLoadingLib'
 project(':BannerViewLib').projectDir = new File('WidgetLib/BannerViewLib')
 project(':PhotoWidget').projectDir = new File('WidgetLib/PhotoWidget')
 project(':CustomWidget').projectDir = new File('WidgetLib/CustomWidget')
@@ -138,7 +138,7 @@ project(':AppScrollView').projectDir = new File('WidgetLib/AppScrollView')
 project(':AppSwitchView').projectDir = new File('WidgetLib/AppSwitchView')
 project(':AppEditText').projectDir = new File('WidgetLib/AppEditText')
 project(':AppConstraintLayout').projectDir = new File('WidgetLib/AppConstraintLayout')
-
+project(':AppLoadingLib').projectDir = new File('WidgetLib/AppLoadingLib')
 
 
 /* +++++++++ 框架基础工具库 +++++++++ */
@@ -189,7 +189,7 @@ project(':MethodTimePlugin').projectDir = new File('AptHelper/MethodTimePlugin')
 /* +++++++++ App监控库 +++++++++ */
 include ':MonitorAliveLib',':MonitorCatonLib',':MonitorAnrLib',':MonitorCrashLib',
         ':MonitorNetLib', ':MonitorFileLib', ':MonitorOomLib', ':MonitorKeepAlive',
-        ':MonitorXposed', ':LeakAndroid', ':LeakAnalyzer', ':LeakWatcher',
+        ':MonitorXposed', ':LeakAndroid', ':LeakAnalyzer', ':LeakWatcher', ':MonitorMemory',
         ':LeakCanarySdk', ':MonitorApmLib', ':MonitorPingLib', ':MonitorFpsLib',
         ':MonitorPrivacy', ':MonitorTimeLib', ':MonitorSpeed', ':MonitorInterceptor'
 project(':MonitorAliveLib').projectDir = new File('MonitorLib/MonitorAliveLib')
@@ -212,6 +212,8 @@ project(':MonitorPrivacy').projectDir = new File('MonitorLib/MonitorPrivacy')
 project(':MonitorTimeLib').projectDir = new File('MonitorLib/MonitorTimeLib')
 project(':MonitorSpeed').projectDir = new File('MonitorLib/MonitorSpeed')
 project(':MonitorInterceptor').projectDir = new File('MonitorLib/MonitorInterceptor')
+project(':MonitorMemory').projectDir = new File('MonitorLib/MonitorMemory')
+
 
 
 /* +++++++++ 音视频 +++++++++ */
