--- a/AppTool/build.gradle
+++ b/AppTool/build.gradle
@@ -259,6 +259,7 @@ dependencies {
     implementation project(path: ':MonitorTimeLib')
     implementation project(path: ':NtpTimeLib')
     implementation project(path: ':WidgetBusiness')
+    implementation project(path: ':MonitorPhone')
 //    implementation project(path: ':MonitorPrivacy')
     annotationProcessor 'com.github.yangchong211.YCAppTool:ServiceLoaderProcessor:1.4.3'
 //    implementation 'com.github.yangchong211.YCAppTool:BlurViewLib:1.3.7'
