--- a/MonitorLib/MonitorPhone/src/main/AndroidManifest.xml
+++ b/MonitorLib/MonitorPhone/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.yc.monitorphone">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application>
         <activity android:name="com.yc.monitorphone.MonitorPhoneActivity"
