--- a/CommonLib/ToolUtilsLib/src/main/AndroidManifest.xml
+++ b/CommonLib/ToolUtilsLib/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.yc.toolutils">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application>
         <activity
