--- a/settings.gradle
+++ b/settings.gradle
@@ -77,9 +77,9 @@ project(':ParallelTaskLib').projectDir = new File('CommonLib/ParallelTaskLib')
 project(':AppBaseStore').projectDir = new File('CommonLib/AppBaseStore')
 project(':BaseClassLib').projectDir = new File('CommonLib/BaseClassLib')
 project(':ReflectionLib').projectDir = new File('CommonLib/ReflectionLib')
-project(':AppInitApi').projectDir = new File('CommonLib/AppInitApi')
-project(':AppInitCommon').projectDir = new File('CommonLib/AppInitCommon')
-project(':AppInitCompiler').projectDir = new File('CommonLib/AppInitCompiler')
+//project(':AppInitApi').projectDir = new File('CommonLib/AppInitApi')
+//project(':AppInitCommon').projectDir = new File('CommonLib/AppInitCommon')
+//project(':AppInitCompiler').projectDir = new File('CommonLib/AppInitCompiler')
 project(':AppLogLib').projectDir = new File('CommonLib/AppLogLib')
 project(':AppRestartLib').projectDir = new File('CommonLib/AppRestartLib')
 project(':SafeIntentLib').projectDir = new File('CommonLib/SafeIntentLib')
