--- a/CommonLib/ToolUtilsLib/build.gradle
+++ b/CommonLib/ToolUtilsLib/build.gradle
@@ -12,6 +12,7 @@ android {
         targetSdkVersion rootProject.ext.android["targetSdkVersion"]
         versionCode rootProject.ext.android["versionCode"]
         versionName rootProject.ext.android["versionName"]
+        multiDexEnabled true
     }
 
     buildTypes {
