--- a/AppLeet/src/main/AndroidManifest.xml
+++ b/AppLeet/src/main/AndroidManifest.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.yc.leetbusiness">
 
     <application
         android:name="com.yc.leetbusiness.LeetApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_yc_name"
+        android:label="@string/app_name"
         android:supportsRtl="true"
+        tools:replace="android:label"
         android:theme="@style/AppTheme">
 
         <activity android:name="com.yc.leetbusiness.LeetCodeActivity">
