--- a/MonitorLib/MonitorPhone/build.gradle
+++ b/MonitorLib/MonitorPhone/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     implementation(rootProject.ext.dependencies["appcompat"])
     implementation(rootProject.ext.dependencies["annotation"])
     implementation project(path: ':ToolUtilsLib')
+    implementation project(path: ':LocaleHelperLib')
 }
