--- a/AppTool/src/debug/AndroidManifest.xml
+++ b/AppTool/src/debug/AndroidManifest.xml
@@ -5,6 +5,9 @@
 
 
     <application>
+        <activity android:name="com.yc.lifehelper.ApmTestActivity"/>
+        <activity android:name="com.yc.lifehelper.BlockListActivity"/>
     </application>
+
 
 </manifest>
