--- a/AppLeet/build.gradle
+++ b/AppLeet/build.gradle
@@ -1,17 +1,18 @@
-apply plugin: 'com.android.application'
+plugins {
+    id 'com.android.application'
+}
 apply from: rootProject.projectDir.absolutePath + "/yc.gradle"
-
 
 android {
     compileSdkVersion rootProject.ext.android["compileSdkVersion"]
     buildToolsVersion rootProject.ext.android["buildToolsVersion"]
+
     defaultConfig {
+        applicationId "com.yc.appleet"
         minSdkVersion rootProject.ext.android["minSdkVersion"]
         targetSdkVersion rootProject.ext.android["targetSdkVersion"]
         versionCode rootProject.ext.android["versionCode"]
         versionName rootProject.ext.android["versionName"]
-        applicationId "com.yc.leetbusiness"
-        multiDexEnabled true
     }
 
     buildTypes {
