--- a/Business/WidgetBusiness/build.gradle
+++ b/Business/WidgetBusiness/build.gradle
@@ -30,14 +30,6 @@ dependencies {
     implementation 'com.github.yangchong211.YCCommonLib:AppLogLib:1.3.0'
     implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.9'
     implementation project(path: ':AppTextView')
+    implementation project(path: ':BaseClassLib')
 }
 
-dependencies {
-
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.2.1'
-
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-}
