--- a/settings.gradle
+++ b/settings.gradle
@@ -42,7 +42,7 @@ project(':LibraryLayer').projectDir = new File('Business/LibraryLayer')
 include ':ImageServer', ':HttpServer', ':ShareServer', ':NfcServer',
         ':ServerInterface', ':GsonServer', ':IpcServer', ':ObjectEqualLib',
         ':EasyBleServer', ':LogUpload', ':OkHttpServer', ':PrivateServer',
-        ':AppLogHelper', ':AppLogProcess', ':NetInterceptor'
+        ':AppLogHelper', ':AppLogProcess', ':NetInterceptor', ':SignalHooker'
 project(':ImageServer').projectDir = new File('ServerLib/ImageServer')
 project(':HttpServer').projectDir = new File('ServerLib/HttpServer')
 project(':ShareServer').projectDir = new File('ServerLib/ShareServer')
@@ -58,7 +58,7 @@ project(':LogUpload').projectDir = new File('ServerLib/LogUpload')
 project(':OkHttpServer').projectDir = new File('ServerLib/OkHttpServer')
 project(':PrivateServer').projectDir = new File('ServerLib/PrivateServer')
 project(':NetInterceptor').projectDir = new File('ServerLib/NetInterceptor')
-
+project(':SignalHooker').projectDir = new File('ServerLib/SignalHooker')
 
 
 /* +++++++++ 框架公共组件层 +++++++++ */
