--- a/AppMonitor/src/main/AndroidManifest.xml
+++ b/AppMonitor/src/main/AndroidManifest.xml
@@ -8,8 +8,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.YCAppTool2">
-        <activity android:name=".MainActivity">
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <activity android:name=".MonitorMainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
