--- a/settings.gradle
+++ b/settings.gradle
@@ -100,7 +100,8 @@ include ':BannerViewLib', ':PhotoWidget', ':CustomWidget', ':BlurViewLib',
         ':EastAdapterLib', ':PhotoCoverLib', ':RefreshViewLib', ':SelectViewLib',
         ':GroupAdapterLib', ':BaseProgress', ':CircleProgress', ':SlideViewLib',
         ':FloatWindow', ':AppTextView', ':AppImageView', ':AppButtonView', ':AppScrollView',
-        ':AppSwitchView', ':AppEditText', ':AppConstraintLayout', ':AppLoadingLib'
+        ':AppSwitchView', ':AppEditText', ':AppConstraintLayout', ':AppLoadingLib',
+        ':RedDotView', ':ExpandLib'
 project(':BannerViewLib').projectDir = new File('WidgetLib/BannerViewLib')
 project(':PhotoWidget').projectDir = new File('WidgetLib/PhotoWidget')
 project(':CustomWidget').projectDir = new File('WidgetLib/CustomWidget')
@@ -138,7 +139,8 @@ project(':AppSwitchView').projectDir = new File('WidgetLib/AppSwitchView')
 project(':AppEditText').projectDir = new File('WidgetLib/AppEditText')
 project(':AppConstraintLayout').projectDir = new File('WidgetLib/AppConstraintLayout')
 project(':AppLoadingLib').projectDir = new File('WidgetLib/AppLoadingLib')
-
+project(':RedDotView').projectDir = new File('WidgetLib/RedDotView')
+project(':ExpandLib').projectDir = new File('WidgetLib/ExpandLib')
 
 /* +++++++++ 框架基础工具库 +++++++++ */
 include ':ZxingServerLib', ':WebSocketLib',  ':SocketIoLib', ':SerialTaskLib' ,
