--- a/AppServer/src/main/AndroidManifest.xml
+++ b/AppServer/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.yc.appserver">
 
     <application
+        android:name="com.yc.appserver.ServerApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -16,6 +17,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.yc.appserver.log.LogTestActivity"/>
     </application>
 
 </manifest>
