--- a/AppWidget/build.gradle
+++ b/AppWidget/build.gradle
@@ -31,10 +31,14 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation(rootProject.ext.dependencies["appcompat"])
     implementation(rootProject.ext.dependencies["annotation"])
+    implementation(rootProject.ext.dependencies["constraintlayout"])
     //通用日志输出库
     implementation 'com.github.yangchong211.YCCommonLib:AppLogLib:1.3.0'
     implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.9'
+    implementation project(path: ':ToolUtilsLib')
+    implementation project(path: ':LibraryLayer')
     implementation project(path: ':AppTextView')
     implementation project(path: ':BaseClassLib')
+    implementation project(path: ':RoundCorners')
 }
 
