--- a/AppWidget/src/main/AndroidManifest.xml
+++ b/AppWidget/src/main/AndroidManifest.xml
@@ -2,8 +2,22 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.yc.widgetbusiness">
 
-    <application>
-        <activity android:name="com.yc.widgetbusiness.DrawableTextActivity"/>
+    <application
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher"
+        android:supportsRtl="true"
+        android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
+        <activity android:name=".WidgetActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".RoundCornersActivity"/>
     </application>
+
 
 </manifest>
