--- a/AppWidget/build.gradle
+++ b/AppWidget/build.gradle
@@ -41,5 +41,7 @@ dependencies {
     implementation project(path: ':BaseClassLib')
     implementation project(path: ':RoundCorners')
     implementation project(path: ':AppImageView')
+    implementation project(path: ':AppScrollView')
+    implementation project(path: ':CustomWidget')
 }
 
