--- a/AppWidget/src/main/AndroidManifest.xml
+++ b/AppWidget/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         <activity android:name=".round.RoundCornersActivity"/>
         <activity android:name=".image.ImageViewActivity"/>
         <activity android:name=".textview.MixtureTextViewActivity"/>
+        <activity android:name=".chart.PreActivity"/>
     </application>
 
 
